@@ -613,6 +613,32 @@ TEST(applying_local_filter_saves_custom_list)
 	filter_dispose(&lwin.auto_filter);
 }
 
+TEST(failed_loadin_of_cv_does_not_override_saved_list)
+{
+	filters_view_reset(&lwin);
+
+	assert_false(flist_custom_active(&lwin));
+
+	flist_custom_start(&lwin, "test");
+	flist_custom_add(&lwin, TEST_DATA_PATH "/existing-files/a");
+	flist_custom_add(&lwin, TEST_DATA_PATH "/existing-files/b");
+	assert_true(flist_custom_finish(&lwin, CV_REGULAR, 0) == 0);
+
+	local_filter_apply(&lwin, "b");
+	load_dir_list(&lwin, 1);
+	assert_int_equal(1, lwin.list_rows);
+
+	flist_custom_start(&lwin, "test-2");
+	assert_false(flist_custom_finish(&lwin, CV_REGULAR, 0) == 0);
+
+	local_filter_remove(&lwin);
+	load_dir_list(&lwin, 1);
+	assert_int_equal(2, lwin.list_rows);
+
+	filter_dispose(&lwin.manual_filter);
+	filter_dispose(&lwin.auto_filter);
+}
+
 static void
 column_line_print(const void *data, int column_id, const char buf[],
 		size_t offset, AlignType align, const char full_column[])
